welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: ')' expected but ',' found.
while (getDirection()==Direction.EST,estFaceMur) match {
                                    ^SnakeBuggle:23: error: illegal start of simple expression
}
^